added a bunch of commands, /shell endpoint